<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/prompt"
        android:layout_margin="8dp"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/choice"
        android:layout_below="@id/editText"/>

    <TextView
        android:id="@+id/textValuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text"
        android:layout_toEndOf="@+id/text"
        android:layout_alignBottom="@+id/text"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/result"
        android:layout_below="@+id/text"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textResult"
        android:layout_toEndOf="@+id/textResult"
        android:layout_alignBottom="@+id/textResult" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearButton"
        android:orientation="horizontal"
        android:layout_below="@id/textResult"
        android:weightSum="100">

        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="50"
            android:text="@string/count" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonResult"
            android:layout_weight="50"
            android:text="@string/refresh"
            android:layout_margin="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linearButton">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/exchangeRates"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler"
            android:padding="8dp"/>
    </LinearLayout>

</RelativeLayout>